--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Java Script</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/core.css">
+    <link href="https://fonts.cdnfonts.com/css/valorant" rel="stylesheet">
 </head>
 <body>
 
