--- a/pages/home_works.html
+++ b/pages/home_works.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/core.css">
     <link rel="stylesheet" href="../css/home_works.css">
+    <link href="https://fonts.cdnfonts.com/css/valorant" rel="stylesheet">
 </head>
 <body>
 
@@ -50,7 +51,6 @@
 
     <div class="move_block">
         <div class="container">
-            <h3>Homework 1 (part 2)</h3>
             <div class="inner_move_block">
                 <div class="parent_block">
                     <div class="child_block"></div>
@@ -59,16 +59,16 @@
         </div>
     </div>
 
-    <div class="stopwatch">
+
+
+    <div class="spike-defuse">
         <div class="container">
-            <h3>Homework 2 </h3>
-            <div class="time">
-                <div class="time_block">
-                    <div class="interval" id="seconds">0</div>
-                </div>
+            <h3>Spike Defuse Simulator</h3>
+            <div class="defuse-bar">
+                <div class="progress" id="progress">0%</div>
             </div>
-            <div class="time_buttons">
-                <button class="btn" id="start">Start</button>
+            <div class="defuse-buttons">
+                <button class="btn" id="start">Start Defuse</button>
                 <button class="btn" id="stop">Stop</button>
                 <button class="btn" id="reset">Reset</button>
             </div>
